# Kaleido-Project

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DATASETS.md  DATA_REQUEST.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  SUMMARY.md  pyproject.toml
configs/data/: trace_port.yaml
configs/deployment/: local.yaml
configs/experiment/: lade_dispatch_modalities_diagnostic.yaml  lade_dispatch_regularizers_diagnostic.yaml  lade_dispatch_world_jepa_smoke.yaml  noaa_ais_eta_smoke.yaml  noaa_ais_phys_jepa_clean_test.yaml  noaa_ais_phys_jepa_development.yaml  ocel_logistics_graph_smoke.yaml  warehouse_action_event_jepa_smoke.yaml  warehouse_action_event_jepa_visreg_smoke.yaml  warehouse_event_jepa_ablations_smoke.yaml  warehouse_event_jepa_smoke.yaml  warehouse_jepa_hybrid_smoke.yaml  warehouse_sequence_smoke.yaml  warehouse_smoke.yaml  warehouse_synthetic_actions_smoke.yaml  warehouse_temporal_t_jepa_smoke.yaml  warehouse_var_event_jepa_smoke.yaml
configs/model/: baselines.yaml
correspondencia/: CorreoEnviado1.txt  CorreoEnviado2.txt  CorreoRecibido1.txt
data/: README.md
data/manifests/: bpi2019.yaml  lade_delivery_jilin_2022.yaml  noaa_ais_2025_jan_feb.yaml  noaa_ais_2025_phys_jepa_holdout.yaml  ocel_container_logistics_v3.yaml  ocel_inventory_management.yaml  ocel_logistics_2026.yaml  (+2 more)
docs/: MEETING_BRIEF.md  progress.md
presentacion/: Kaleido_FlowTwin_Presentacion.html  Kaleido_FlowTwin_Presentacion.tex  README.md
scripts/: audit_export.py  build_noaa_ais_holdout_prefixes.py  build_ocel.py  build_report.py  discover_process.py  download_noaa_ais_holdout.py  evaluate.py  run_shadow_replay.py  select_ais_phys_jepa.py  train_baselines.py  train_event_jepa.py
(+134 files in other folders)
