[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaleido-flowtwin"
version = "0.1.0"
description = "Read-only predictive operations MVP for Kaleido Trace Port"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "EVOCON Solutions GmbH" }]
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "joblib>=1.5,<2",
  "numpy>=2.1,<3",
  "pandas>=2.3,<4",
  "polars>=1.32,<2",
  "pyarrow>=19,<24",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0.2,<7",
  "reportlab>=4.4,<5",
  "rich>=14,<15",
  "scikit-learn>=1.6,<2",
  "simpy>=4.1,<5",
  "typer>=0.16,<1",
  "tzdata>=2025.2",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
sequence = ["torch>=2.7,<3"]
process-mining = ["pm4py>=2.7.15,<3"]

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pandas-stubs>=2.3,<3",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
  "types-pyyaml>=6.0.12,<7",
]

[project.scripts]
flowtwin = "flowtwin.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/flowtwin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["flowtwin"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib", "reportlab.*", "simpy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "slow: exercises a downloaded public dataset or a neural model",
  "optional: requires an optional capability",
]
